# github-operator

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  compose.yaml  log4rs.cli.yaml  log4rs.yaml
crd/: github-repository.crd.yaml
demo/github-repository/: namespace.pdh-da.yaml  namespace.yaml  otto-ec.alarm-notification.yaml  otto-ec.pdh-da_alarm-notification.yaml  repo-1.yaml
demo/prometheus/: prometheus.yml
demo/v2/: otto-ec.pdh-da_alarm-notification.yaml
docs/: api.http  discuss.md
docs/adrs/: 0000-adr-template.md  0001-how-to-deal-with-manually-configured-settings.md
examples/cue/: Makefile  data.cue  generate_tool.cue  repositories.cue  resources.cue  spec.cue
src/: controller.rs  extensions.rs  lib.rs  main.rs
src/adapter/: http_github_service.rs  mod.rs  octocrab_github_service.rs
src/application/operator/: controller.rs
src/controller/: autolink_reference_controller.rs  mod.rs  permission_controller.rs  repository_controller.rs
src/domain/: archive_github_repository_use_case.rs  archive_repository_use_case.rs  delete_autolink_reference_use_case.rs  delete_permissions_use_case.rs  get_github_repository_use_case.rs  get_repository_use_case.rs  mod.rs  reconcile_autolink_reference_use_case.rs  reconcile_github_repository_use_case.rs  reconcile_permissions_use_case.rs  reconcile_repository_use_case.rs
src/domain/model/: autolink_reference.rs  github_repository.rs  github_repository_spec.rs  mod.rs  permission.rs  repository.rs  update_repository.rs
src/domain/port/: github_service.rs
src/domain/service/: github_service.rs
src/domain/spec/: autolink_reference_spec.rs  mod.rs  repository_spec.rs
