[package]
name = "github-operator"
version = "0.1.0"
edition = "2021"
default-run = "github-operator"

[[bin]]
doc = false
name = "crdgen"
path = "src/bin/crdgen.rs"

[[bin]]
doc = false
name = "cli"
path = "src/bin/cli.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.88.1", features = ["runtime", "derive", "unstable-runtime"] }
k8s-openapi = { version = "0.21.0", features = ["v1_28"] }
tokio-util = "0.7.8"
anyhow = "1.0.79"
futures = "0.3.30"
jsonpath_lib = "0.3.0"
log4rs = "1.2.0"
log = "0.4.20"
tokio = { version = "1.35.1", features = ["rt", "rt-multi-thread", "macros"] }
schemars = "0.8.13"
backoff = "0.4.0"
tracing = "0.1.37"
garde = { version = "*", features = ["derive"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.112"
serde_yaml = "0.9.30"
thiserror = "1.0.46"
anyerror = "0.1"
indoc = "2.0.4"
itertools = "0.12.0"
async-trait = "0.1.77"
clap = { version = "4.4.18", features = ["derive"] }
httpmock = "0.7.0"
ureq = { version = "*", features = ["json", "charset"] }
differ-from-spec = { git = "ssh://git@github.com/benkeil/rust-differ-from-spec.git", branch = "main" }