[package]
name = "github-operator"
version = "0.1.0"
edition = "2021"
default-run = "github-operator"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "1.1.0", features = ["runtime", "derive", "kube-derive"] }
kube-derive = "1.1.0"
k8s-openapi = { version = "0.25.0", features = ["v1_33", "schemars", "latest"] }
futures = "0.3.31"
tokio = { version = "1.47.1", features = ["rt", "rt-multi-thread", "macros"] }
schemars = "0.8"
garde = { version = "0.22.0", features = ["derive"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
serde_yaml = "0.9.33"
thiserror = "2.0.15"
async-trait = "0.1.89"
clap = { version = "4.5.45", features = ["derive"] }
ureq = { version = "*", features = ["json", "charset"] }
differ-from-spec = { git = "https://github.com/benkeil/rust-differ-from-spec.git", branch = "main" }
# tracing
log = "0.4.27"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-opentelemetry = "0.31"
opentelemetry = { version = "0.30", features = ["default", "metrics"] }
opentelemetry_sdk = { version = "0.30", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.30", features = ["grpc-tonic"] }
opentelemetry-prometheus = "0.29"
prometheus = "0.14"
axum = "0.8"
axum-server = "0.7"
